@@ -707,7 +707,7 @@ static void _make_uid_array(char *uid_str)
 	tok = strtok_r(tmp_str, ",", &save_ptr);
 	while (tok) {
 		if (uid_from_string(tok, &allowed_uid[allowed_uid_cnt++]) < 0)
-			error("knl_generic.conf: Invalid AllowUserBoot: %s",
+			fatal("knl_generic.conf: Invalid AllowUserBoot: %s",
 			      tok);
 		tok = strtok_r(NULL, ",", &save_ptr);
 	}
