@@ -39,6 +39,8 @@ CONFIGURATION FILE CHANGES (see appropriate man page for details)
 =====================================================================
  - job_container.conf - Added "Dirs" option to list desired private mount
    points.
+ -- node_features plugins - invalid users specified for AllowUserBoot will now
+    result in fatal() rather than just an error.
 
 COMMAND CHANGES (see man pages for details)
 ===========================================
